# MoeStardust

./: .gitignore  Cargo.toml  README.md
src/: event_handler.rs  main.rs
src/commands/: mod.rs  setu.rs
src/modules/: img2color.rs  mod.rs  setu.rs
src/utils/: img.rs
