[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hyper = { version = "0.14.27", features = ["full"] }
hyper-tls = "0.5.0"
image = "0.24.7"
palette = "0.7.3"
reqwest = "0.11.18"
serde = { version = "1.0.183", features = ["derive"] }
serde_derive = "1.0.183"
serde_json = "1.0.104"
serenity = "0.11"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = 'z'
lto = true
strip = true
