[package]
name = "test-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
panic = 'abort'

[dependencies]
dotenv = "0.15.0"
poise = "0.6.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
# 日志系统
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "local-time"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.10.3"
